# Tarea-3-v1

./: .gitignore  CMakeLists.txt  README.md  gps_example.txt
cpp/Stage1/src/: Stage1.cpp
cpp/Stage3/src/: Stage3.cpp
cpp/include/: Broker.h  Component.h  GPSCarPublisher.h  GPSCarSubscriber.h  GPSFollower.h  Publisher.h  Subscriber.h  Topic.h  VideoFollower.h  VideoPublisher.h
cpp/src/: Broker.cpp  Component.cpp  GPSCarPublisher.cpp  GPSCarSubscriber.cpp  GPSFollower.cpp  Publisher.cpp  Subscriber.cpp  Topic.cpp  VideoFollower.cpp  VideoPublisher.cpp
docs/: documentacion.html  documentacion.md
